Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16643

Status labels of progress bars are not themed -> broken in light themes

    XMLWordPrintable

Details

    • 2a765db3a50210d9b242518b4a465a8f175e7065

    Description

      The status labels under or next to progress bars use (chardcoded) colors which are incompatible with light themes.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes