Fix text color of progress/find status summary label

Using a themed text color instead of a hard-coded one and making sure
that ManhattanStyle does not tweak it.

Task-number: QTCREATORBUG-16643
Change-Id: I4bac9b29ee3c293270f39438664d617ac7591c8e
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>